<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Retrofit App</string>
    <string name="informations">Informations</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="type">Type</string>
    <string name="title_character">Characters</string>
    <string name="title_location">Locations</string>
    <string name="title_episode">Episodes</string>
    <string name="status">Status</string>
    <string name="apply">Apply</string>
    <string name="species">Species</string>
    <string name="name">Name</string>
    <string name="deleted">Character is deleted</string>
    <string name="cancel">Cancel</string>
    <string name="filter">filter</string>
    <string name="comment_filter">You need to select both status and gender</string>
    <string name="undo">UNDO</string>
    <string name="favorite">Favorite</string>
    <string name="dark_theme">Dark Theme:</string>
    <string name="settings">Settings</string>
</resources>