<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.character.CharacterDetailActivity"
    tools:showIn="@layout/character_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#8E8E93"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/informations"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#081F32"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/gender"/>
        <TextView
            android:id="@+id/gender_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="txt"
            android:textColor="#6E798C"
            android:layout_marginStart="20dp"
            android:textSize="14sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="#21212114"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textColor="#081F32"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/origin_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="txt"
            android:layout_marginStart="20dp"
            android:textColor="#6E798C"
            android:textSize="14sp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="#21212114"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#081F32"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/type"/>
        <TextView
            android:id="@+id/type_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#6E798C"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            tools:text="txt"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="#21212114"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#081F32"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/title_location"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="#6E798C"
                android:textSize="14sp"
                tools:text="txt"
                android:layout_below="@id/locationText"/>

            <ImageButton
                android:id="@+id/btn_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_go"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="#21212114" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#8E8E93"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/title_episode"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/episodesRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/episode_item" />

        <ProgressBar
            android:id="@+id/progress_Bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
</layout>